Fixed overflow

--- a/frontend/views/chat/index.css
+++ b/frontend/views/chat/index.css
@@ -3,6 +3,11 @@ body { font: 13px Helvetica, Arial; }
 html, body, .main-container {
     height: 100%;
 }
+
+.main-container{
+    overflow: hidden;
+}
+
 .chat-container {
     border-left: 1px solid grey;
     background: url(https://i.imgur.com/RGsYHhj.png) no-repeat;
@@ -33,10 +38,13 @@ html, body, .main-container {
     margin-bottom: 0;
     border-radius: 0;
 }
-#messages { list-style-type: none; margin: 0; padding: 0; }
+#messages {
+    list-style-type: none;
+    margin: 0 0 50px;
+    padding: 0;
+}
 #messages li { padding: 5px 10px; }
 /*#messages li:nth-child(odd) { background: #eee; }*/
-#messages { margin-bottom: 40px }
 #messages .time {
     text-align: end;
     font-size: 10px;
@@ -99,6 +107,16 @@ html, body, .main-container {
 .row {
     margin-right: unset;
     margin-left: unset;
+}
+
+.header-container {
+    height: fit-content;
+}
+
+#messages-container {
+    max-height: 772px;
+    height: 100%;
+    overflow: auto;
 }
 
 .header-title {
